tests/expectations/parser/structs/only_comma_separators_fail.out
namespace = "Parse"
expectation = "Fail"
outputs = ["""
Error [EPAR0370041]: Each member declaration in a struct or record must be followed by a comma (except the last).
    --> test:4:14
     |
   4 |         x: u8;
     |              ^
Error [EPAR0370009]: unexpected string: expected 'identifier', found ';'
    --> test:4:14
     |
   4 |         x: u8;
     |              ^"""]
